--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <!-- TODO: add menu links, delete this comment -->
+  <!-- TODO: add menu links, -->
   <header>
     <nav>
       <ul>
