--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a>About</a></li>
-        <li><a href="../contact/">Contact</a></li>
+        <li><a href="../contact/index.html">Contact</a></li>
       </ul>
     </nav>
   </header>
