--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <nav>
       <ul>
         <li><a>Home</a></li>
-        <li><a href="about/">About</a></li>
-        <li><a href="contact/">Contact</a></li>
+        <li><a href="about/index.html">About</a></li>
+        <li><a href="contact/index.html">Contact</a></li>
       </ul>
     </nav>
   </header>
