--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
   <link rel="manifest" href="../images/site.webmanifest">
   <title>About</title>
-  
+
 </head>
 
 <body>
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li><a>About</a></li>
         <li><a href="../contact/">Contact</a></li>
       </ul>
